@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2007,2009-2011 - TortoiseSVN
+// Copyright (C) 2003-2007,2009-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -111,6 +111,11 @@ CStoreSelection::~CStoreSelection()
         m_logdlg->UpdateLogInfoLabel();
         m_logdlg->m_LogList.Invalidate();
     }
+}
+
+void CStoreSelection::ClearSelection()
+{
+    m_SetSelectedRevisions.clear();
 }
 
 CLogCacheUtility::CLogCacheUtility
