@@ -34,6 +34,10 @@ Version 1.7.8
        admin dirs. (Stefan)
 - BUG: Issue #327: Access violation with
        "Show log" on copied entry. (Stefan)
+- BUG: Issue #330: crash with invalid
+       config file. (Stefan)
+- BUG: Issue #332: crash when closing
+       log dialog. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
